--- a/index.html.html
+++ b/index.html.html
@@ -6,7 +6,7 @@
     <title>Sound of Sunset</title>
     <link rel="stylesheet" type="text/css" href="SUNSET/sunset.css">
 
-   
+<img src="ROSE.jpg" alt="Description">   
 
 
 
